--- a/pacemaker/ClusterIP_detach.html
+++ b/pacemaker/ClusterIP_detach.html
@@ -328,7 +328,7 @@ So even if stonith is disabled, ClusterIP on the failure node is removed (at lea
 
   <div role="contentinfo">
     <p>
-        &copy; Copyright 2016 Red Hat, Inc..
+        &copy; Copyright 2016 Hiro Mihara.
 
     </p>
   </div>
