--- a/pacemaker/codewalk-addResource.html
+++ b/pacemaker/codewalk-addResource.html
@@ -612,7 +612,7 @@ May 30 16:52:54 [2445] a1.pm.redhat.com       lrmd: (      lrmd.c:113   )   debu
 
   <div role="contentinfo">
     <p>
-        &copy; Copyright 2016 Red Hat, Inc..
+        &copy; Copyright 2016 Hiro Mihara.
 
     </p>
   </div>
