--- a/pacemaker/codewalk-timeoutrsc.html
+++ b/pacemaker/codewalk-timeoutrsc.html
@@ -286,7 +286,7 @@ lib/common/mainloop.c:1093: mainloop_child_add_with_flags(pid_t pid, int timeout
 
   <div role="contentinfo">
     <p>
-        &copy; Copyright 2016 Red Hat, Inc..
+        &copy; Copyright 2016 Hiro Mihara.
 
     </p>
   </div>
