--- a/pacemaker/corosync_crypto.html
+++ b/pacemaker/corosync_crypto.html
@@ -203,7 +203,7 @@ crypto_cipher
 
   <div role="contentinfo">
     <p>
-        &copy; Copyright 2016 Red Hat, Inc..
+        &copy; Copyright 2016 Hiro Mihara.
 
     </p>
   </div>
