--- a/pacemaker/fence_case_study.html
+++ b/pacemaker/fence_case_study.html
@@ -434,7 +434,7 @@ May 11 17:41:22 a1 crmd[2079]:  notice: State transition S_TRANSITION_ENGINE -&g
 
   <div role="contentinfo">
     <p>
-        &copy; Copyright 2016 Red Hat, Inc..
+        &copy; Copyright 2016 Hiro Mihara.
 
     </p>
   </div>
