--- a/pacemaker/group-clone.html
+++ b/pacemaker/group-clone.html
@@ -315,7 +315,7 @@ http request from host computer was redirected to a3, which is now redirected to
 
   <div role="contentinfo">
     <p>
-        &copy; Copyright 2016 Red Hat, Inc..
+        &copy; Copyright 2016 Hiro Mihara.
 
     </p>
   </div>
