--- a/pacemaker/mariadb-cluster.html
+++ b/pacemaker/mariadb-cluster.html
@@ -288,7 +288,7 @@ On other nodes,</p>
 
   <div role="contentinfo">
     <p>
-        &copy; Copyright 2016 Red Hat, Inc..
+        &copy; Copyright 2016 Hiro Mihara.
 
     </p>
   </div>
