--- a/pacemaker/pacemaker-inside.html
+++ b/pacemaker/pacemaker-inside.html
@@ -740,7 +740,7 @@ child_timeout_callback() is called from</p>
 
   <div role="contentinfo">
     <p>
-        &copy; Copyright 2016 Red Hat, Inc..
+        &copy; Copyright 2016 Hiro Mihara.
 
     </p>
   </div>
