--- a/pacemaker/pacemaker_setup.html
+++ b/pacemaker/pacemaker_setup.html
@@ -330,7 +330,7 @@ Enabled:   1
 
   <div role="contentinfo">
     <p>
-        &copy; Copyright 2016 Red Hat, Inc..
+        &copy; Copyright 2016 Hiro Mihara.
 
     </p>
   </div>
