--- a/pacemaker/words-jp.html
+++ b/pacemaker/words-jp.html
@@ -270,7 +270,7 @@ colocationは、resource間の関係を記述します。例えば、</p>
 
   <div role="contentinfo">
     <p>
-        &copy; Copyright 2016 Red Hat, Inc..
+        &copy; Copyright 2016 Hiro Mihara.
 
     </p>
   </div>
