--- a/pacemaker/Questions.html
+++ b/pacemaker/Questions.html
@@ -177,7 +177,7 @@
 
   <div role="contentinfo">
     <p>
-        &copy; Copyright 2016 Red Hat, Inc..
+        &copy; Copyright 2016 Hiro Mihara.
 
     </p>
   </div>
