--- a/pacemaker/codewalk-monitoringResource.html
+++ b/pacemaker/codewalk-monitoringResource.html
@@ -994,7 +994,7 @@ Here are the logs on a2</p>
 
   <div role="contentinfo">
     <p>
-        &copy; Copyright 2016 Red Hat, Inc..
+        &copy; Copyright 2016 Hiro Mihara.
 
     </p>
   </div>
