--- a/pacemaker/index_en.html
+++ b/pacemaker/index_en.html
@@ -238,7 +238,7 @@
 
   <div role="contentinfo">
     <p>
-        &copy; Copyright 2016 Red Hat, Inc..
+        &copy; Copyright 2016 Hiro Mihara.
 
     </p>
   </div>
