--- a/pacemaker/ipt_clusterip.html
+++ b/pacemaker/ipt_clusterip.html
@@ -293,7 +293,7 @@ tests/options-ipv4.rules
 
   <div role="contentinfo">
     <p>
-        &copy; Copyright 2016 Red Hat, Inc..
+        &copy; Copyright 2016 Hiro Mihara.
 
     </p>
   </div>
